# network-design-2e-last-mile

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/distances/: input_matrix_distance_dc_facilities.xlsx  input_matrix_distance_facilities_pixels.xlsx  input_matrix_distance_satellite_to_pixels.xlsx
data/facilities/: input_facilities.xlsx
data/pixels/: grid_pixels.geojson  input_pixels.xlsx  raw_pixels.csv  raw_pixels_with_drop_demand.csv
data/raw/: base_customers_all_years_z7.csv
data/scenarios/distribution/: distribution_params.json
notebooks/matrix-distances/: compute_distances.ipynb  velocidad_interstop.ipynb
notebooks/pixels/: pixelation_process.ipynb
notebooks/scenarios/: generate_scenarios.ipynb
src/: config.py  constants.py
src/data/: etl.py
src/entrypoints/: main_extended_saa.py  run_extended_saa.py
src/models/: extended_saa_model.py
src/routing_tools/: continuous_approximation.py
src/utils/: classes.py  custom_logger.py  instance.py  scenario.py
