[tool.poetry]
name = "2e-multi-period-capacity"
version = "1.0.0"
description = ""
authors = ["phurtac <pitehrh@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
gurobipy = "10.0.0"
gurobi-machinelearning = "^1.3.3"
jupyter = "^1.0.0"
geopy = "^2.4.1"
scipy = "^1.11.4"
geopandas = "^0.14.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.7.1"
seaborn = "^0.13.2"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
isort = "^5.13.0"
black = "^23.11.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 130

[tool.pylint."BASIC"]
good-names = [
    "i", "j", "k",        
    "u", "v", "w",        
    "d", "c", "f",
    "X", "Y", "Z",    
    "Q", "P", "W", "F",   
    "x", "y", "z"
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "logging-fstring-interpolation",  # Permitir f-strings en logs
]

[tool.black]
line-length = 130
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 130
